# mydatatools-desktop

./: .firebaserc  .gitignore  GEMINI.md  Makefile  README.md
.agents/: skills.json
.agents/skills/api-developer/: SKILL.md
.agents/skills/backend-developer/: SKILL.md
.agents/skills/code-debugger/: SKILL.md
.agents/skills/code-documenter/: SKILL.md
.agents/skills/code-refactor/: SKILL.md
.agents/skills/code-reviewer/: SKILL.md
.agents/skills/code-security-auditor/: SKILL.md
.agents/skills/code-standards-enforcer/: SKILL.md
.agents/skills/database-designer/: SKILL.md
.agents/skills/flutter-developer/: SKILL.md
.agents/skills/git-developer/: SKILL.md
.agents/workflows/: git-cleanup.md  git-commit.md  git-complete-feature.md  git-delete-feature.md  git-merge-feature.md  git-start-feature.md  git-sync-feature.md
.gemini/: GEMINI.md  code_review_report.md
.github/workflows/: build_and_release.yml  build_python.yml  commit_actions.yaml
client/: README.md  pubspec.yaml
client/assets/: Readme.md
client/assets/python/aichat/: .gitignore  Readme.md  __init__.py  debug_hooks.py  main.py  main.spec  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  utils.py
client/assets/python/aichat/hooks/: hook-langchain_google_genai.py
client/assets/python/aichat/src/: verify_changes.py
client/assets/python/aichat/src/aichat/: config.py  genui_schema.py  main.py  model_manager.py  models.py  routes.py  state.py  utils.py
client/assets/python/aichat/tests/: __init__.py  test_chat_response.py  test_embedding.py  test_embedding_upload.py  test_health_check.py  test_model_manager.py  test_models.py  test_routes.py  test_start_session.py  test_state.py  test_utils.py
client/lib/: app_constants.dart  app_logger.dart  app_router.dart  database_manager.dart  database_manager.g.dart  family_dam_app.dart  main.dart  python_manager.dart
client/macos/: Podfile
client/test/: database_manager_test.dart  login_test.dart  widget_test.dart
client/tool/: clean_app_support.dart
services/download-models/: .gcloudignore  Dockerfile  Readme.md  cloudbuild.yaml  main.py  requirements.txt
(+124 files in other folders)
